# its-db-parameters

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
